[package]
name = "edicast"
version = "0.1.0"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
crossbeam = "0.7"
lame = "0.1"
lewton = "0.9"
minimp3 = "0.3"
num-rational = "0.2"
ogg = "0.7"
percent-encoding = "1.0"
serde = "1.0"
serde_derive = "1.0"
tiny_http = { git = "https://github.com/haileysome/tiny-http" }
toml = "0.4"
slog = "2.4"
slog-term = "2.4"
slog-async = "2.3"
uuid = { version = "0.7.2", features = ["slog", "v4"] }
