[package]
name = "edicast"
version = "0.1.0"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bytes = "1.4"
crossbeam = "0.7"
futures = "0.3.28"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["server", "http1"] }
jemallocator = "0.5"
lame = "0.1"
lewton = "0.9"
minimp3 = "0.5"
num-rational = "0.2"
ogg = "0.7"
percent-encoding = "1.0"
serde = "1.0"
serde_derive = "1.0"
slog = "2.4"
slog-async = "2.3"
slog-scope = "4.4.0"
slog-term = "2.4"
thiserror = "1.0.40"
tiny_http = { git = "https://github.com/haileys/tiny-http", branch = "edicast-0.12.0" }
tokio = { version = "1.28.0", features = ["bytes", "macros", "net", "rt", "sync"] }
toml = "0.4"
uuid = { version = "0.7.2", features = ["slog", "v4"] }
